--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "appname": {
+    "turbodimitri": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/appname",
+            "outputPath": "dist/turbodimitri",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "appname:build:production"
+              "buildTarget": "turbodimitri:build:production"
             },
             "development": {
-              "buildTarget": "appname:build:development"
+              "buildTarget": "turbodimitri:build:development"
             }
           },
           "defaultConfiguration": "development"
